# simple-captcha

./: README.md  pyproject.toml  setup.cfg
examples/: example.py
src/captcha/: __init__.py
src/captcha/phrases/: english.lst  portuguese.lst
