[metadata]
name = simple-captcha
version = 0.0.1
author = Marcel Guinhos
author_email = mguinhos@gmail.com
description = A simple captcha library based in pillow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mguinhos/simple-captcha

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True

[options.package_data]
fonts = *.ttf
phrases = *.lst

[options.packages.find]
where = src