[metadata]
name = simple-captcha
version = 0.0.2
author = Marcel Guinhos
author_email = mguinhos@gmail.com
description = A simple captcha library based in pillow
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mguinhos/simple-captcha
license = MIT

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.10

[options.package_data]
* = *.lst, *.ttf

[options.packages.find]
where = src